crates/rpkl-runtime/tests/snapshots/snapshot_tests__pkl_math_int_limits.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "math": {
    "pi": 3.141592653589793,
    "e": 2.718281828459045,
    "maxInt": 9223372036854775807,
    "minInt": -9223372036854775808,
    "maxFiniteFloat": 1.7976931348623157e308,
    "minFiniteFloat": -1.7976931348623157e308,
    "maxInt8": 127,
    "minInt8": -128,
    "maxInt16": 32767,
    "minInt16": -32768,
    "maxInt32": 2147483647,
    "minInt32": -2147483648,
    "maxUInt8": 255,
    "maxUInt16": 65535,
    "maxUInt32": 4294967295,
    "maxUInt": -1,
    "Infinity": null,
    "NaN": null
  },
  "r_max_int": 9223372036854775807,
  "r_min_int": -9223372036854775808,
  "r_max_int8": 127,
  "r_min_int8": -128,
  "r_max_int16": 32767,
  "r_min_int16": -32768,
  "r_max_int32": 2147483647,
  "r_min_int32": -2147483648,
  "r_max_uint8": 255,
  "r_max_uint16": 65535,
  "r_max_uint32": 4294967295,
  "r_max_uint": -1
}
