crates/rpkl-runtime/tests/snapshots/snapshot_tests__regex_find_matches_in.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "r1": [
    {
      "value": "[*]",
      "start": 0,
      "end": 3,
      "groups": []
    },
    {
      "value": "[*]",
      "start": 8,
      "end": 11,
      "groups": []
    }
  ],
  "r2": [
    {
      "value": "",
      "start": 0,
      "end": 0,
      "groups": []
    },
    {
      "value": "",
      "start": 1,
      "end": 1,
      "groups": []
    },
    {
      "value": "",
      "start": 2,
      "end": 2,
      "groups": []
    },
    {
      "value": "",
      "start": 3,
      "end": 3,
      "groups": []
    }
  ],
  "r3": [
    {
      "value": "abc",
      "start": 0,
      "end": 3,
      "groups": []
    },
    {
      "value": "def",
      "start": 4,
      "end": 7,
      "groups": []
    },
    {
      "value": "ghi",
      "start": 8,
      "end": 11,
      "groups": []
    }
  ]
}
