crates/rpkl-runtime/tests/snapshots/snapshot_tests__regex_group_count.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "r1": 0,
  "r2": 0,
  "r3": 2,
  "r4": 0
}
