crates/rpkl-runtime/tests/snapshots/snapshot_tests__regex_pattern.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "r1": "",
  "r2": "(?i)abc",
  "r3": "a(\\s*)b(\\s*)c"
}
