crates/rpkl-runtime/tests/snapshots/snapshot_tests__set_add_remove.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "s": [
    1,
    2,
    3
  ],
  "r1": [
    1,
    2,
    3,
    4
  ],
  "r2": [
    1,
    2,
    3
  ],
  "r3": [
    1,
    3
  ],
  "r4": [
    1,
    2,
    3
  ]
}
