crates/rpkl-runtime/tests/snapshots/snapshot_tests__set_creation.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 1515
expression: eval_pkl(source)
---
{
  "s": [
    1,
    2,
    3
  ]
}
